--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tomcat-image
-  labels:
-     app: hello
+  name: private-reg
 spec:
   containers:
   - name: private-reg-container
-    image: nginx
+    image: sart1007/firstregistery:latest
+  imagePullSecrets:
+  - name: regcred
+
