--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,18 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.20.1</version>
         </plugin>
+          <plugins>
+   <plugin>
+     <groupId>com.google.cloud.tools</groupId>
+     <artifactId>appengine-maven-plugin</artifactId>
+     <version>2.2.0</version>
+     <configuration>
+       <stage.enableJarSplitting>true</stage.enableJarSplitting>
+       <deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+       <cloudSdkPath>/usr/foo/path/to/cloudsdk</cloudSdkPath>
+     </configuration>
+  </plugin>
+</plugins>
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
           <version>3.2.0</version>
