--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,5 @@
 steps:
-- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-  entrypoint: 'bash'
-  args: ['-c']
-- name: maven:3-jdk-8
-  entrypoint: mvn
-  args: ['build']
+  - name: maven:3-jdk-8
+   entrypoint: mvn
+   args: ['clean build']
 
