--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.20.1</version>
         </plugin>
-          <plugins>
+          <plugin>
           
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
