--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
   steps:
   - name: maven:3-jdk-8
     entrypoint: mvn
-    args: ['clean', 'package']
+    args: ['com.google.cloud.tools:appengine-maven-plugin:run']
