--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,15 @@
           <version>3.0.2</version>
         </plugin>
         <plugin>
+            <groupId>com.google.cloud.tools</groupId>
+            <artifactId>appengine-maven-plugin</artifactId>
+            <version>2.2.0</version>
+            <configuration>
+                <projectId>your-project-ID-goes-here</projectId>
+                <version>1</version>
+            </configuration>
+        </plugin>
+        <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.7.0</version>
         </plugin>
