--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,7 @@
-  steps:
-  - name: maven:3-jdk-8
-    entrypoint: mvn
-    args: ['com.google.cloud.tools:appengine-maven-plugin:run']
+steps:
+  - id: 'Stage app using mvn appengine plugin on mvn cloud build image'
+    name: 'gcr.io/cloud-builders/mvn@sha256:91177350c24af8407bd0fdef3b1b39fabab1770eb4e3b6510819002550b2bab1'
+    args: ['package', 'appengine:stage']
+  - id: 'Deploy to app engine using gcloud image'
+    name: 'gcr.io/cloud-builders/gcloud'
+    args: ['app', 'deploy', 'target/appengine-staging/app.yaml']
