--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,5 +4,5 @@ steps:
     entrypoint: mvn
     args: ['clean','package']
   - id: 'Deploy to app engine using gcloud image'
-    name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy', 'target/appengine-staging/app.yaml']
+    name: 'gcr.io/cloud-builders/docker'
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
