--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,3 +6,6 @@ steps:
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
+  - id: 'Push image to registery'
+    name: 'gcr.io/cloud-builders/docker'
+    args: [ 'push', 'gcr.io/$PROJECT_ID/test']
