--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
     name: "gcr.io/cloud-builders/gke-deploy"
     args:
     - run
-    - --filename=./src/deployment.yaml
+    - --filename=./src
     - --image=gcr.io/$PROJECT_ID/test:latest
     - --location=us-central1-c
     - --cluster=cluster-1
