--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
-    -id: 'Run sonarqube' 
+  - id: 'Sonarqube' 
     name: 'gcr.io/$PROJECT_ID/sonar-scanner:latest'
     args:
     - '-Dsonar.host.url=http://34.68.145.186:8010'
