--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,10 @@ steps:
       - |
           cd src
           ls
+   - id: 'build your instance'
+    name: 'maven:3-jdk-8'
+    entrypoint: mvn
+    args: ['clean','install']        
   - id: 'Sonarqube' 
     name: 'gcr.io/practical-case-298304/testt:latest'
     args:
@@ -14,10 +18,6 @@ steps:
     - '-Dsonar.projectKey=mykey'
     - '-Dsonar.qualitygate.wait=true'
     - '-Dsonar.sources=.'
-  - id: 'build your instance'
-    name: 'maven:3-jdk-8'
-    entrypoint: mvn
-    args: ['clean','package']
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
