--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps: 
   - id: 'build your instance'
-    name: 'maven:3-jdk-8'
+    name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
     args: ['sonar:sonar']        
   - id: 'Sonarqube' 
