--- a/src/cloudbuild.yaml
+++ b/src/cloudbuild.yaml
@@ -8,7 +8,7 @@ steps:
       - |
           cd ..
   - id: 'build your instance'
-    name: 'maven:3-jdk-11-slim'
+    name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']        
   - id: 'Sonarqube' 
