--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -11,7 +11,11 @@ steps:
   - id: 'build your instance'
     name: 'maven:3-jdk-8'
     entrypoint: mvn
-    args: ['clean','package']        
+    args: ['clean','package']
+artifacts:
+    objects:
+      location: 'gs://sarthakbucket/'
+      paths: '/workspace/target/roshambo.war'    
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
