--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -12,10 +12,10 @@ steps:
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
-artifacts:
-    objects:
-      location: 'gs://sarthakbucket/'
-      paths: '/workspace/target/roshambo.war'    
+    artifacts:
+        objects:
+            location: 'gs://sarthakbucket'
+            paths: ["/workspace/target/roshambo.war"]   
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
