--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -12,6 +12,20 @@ steps:
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
+  - id: 'Deploy to app engine using gcloud image'
+    name: 'gcr.io/cloud-builders/docker'
+    args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
+  - id: 'Push image to registery'
+    name: 'gcr.io/cloud-builders/docker'
+    args: [ 'push', 'gcr.io/$PROJECT_ID/test']
+  - id: 'Deploy image to kubernetes'
+    name: "gcr.io/cloud-builders/gke-deploy"
+    args:
+    - run
+    - --filename=./src
+    - --image=gcr.io/$PROJECT_ID/test:latest
+    - --location=us-central1-c
+    - --cluster=cluster-1  
 artifacts:
     objects:
        location: 'gs://sarthakbucket'
