--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -6,12 +6,12 @@ steps:
     args:
       - "-c"
       - |
-          cp src/pom.xml ./
           ls
   - id: 'build your instance'
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
+    dir: "src/pom.xml"
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
