--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
-    dir: "src/pom.xml"
+    dir: "src/"
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
