--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -11,7 +11,14 @@ steps:
     name: 'maven:3-jdk-8'
     entrypoint: mvn
     args: ['clean','package']
-    dir: "src/"
+  - id: 'Sonarqube' 
+    name: 'gcr.io/{project-id}/testt:latest'
+   args:
+     - '-Dsonar.host.url=http://34.68.145.186:8010'
+     - '-Dsonar.login=6c40d08c8646fef3bfcb7d2a1ae3b03d7bff5ed3'
+     - '-Dsonar.projectKey=mykey'
+     - '-Dsonar.qualitygate.wait=true'
+     - '-Dsonar.sources=.'  
   - id: 'Deploy to app engine using gcloud image'
     name: 'gcr.io/cloud-builders/docker'
     args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/test', '.' ]
