--- a/src/main/cloudbuild.yaml
+++ b/src/main/cloudbuild.yaml
@@ -12,7 +12,7 @@ steps:
     entrypoint: mvn
     args: ['clean','package']
   - id: 'Sonarqube' 
-    name: 'gcr.io/{project-id}/testt:latest'
+    name: 'gcr.io/$PROJECT_ID/testt:latest'
     args:
      - '-Dsonar.host.url=http://34.68.145.186:8010'
      - '-Dsonar.login=6c40d08c8646fef3bfcb7d2a1ae3b03d7bff5ed3'
