--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,11 @@
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
     args: ['clean','package','-Dmaven.test.skip=true']
+  
+  - id: 'build your instance'
+    name: 'maven:3.6.0-jdk-11-slim'
+    entrypoint: mvn
+    args: ['release']  
   #  dir: "run/helloworld"
   - id: 'Build'
     name: 'gcr.io/cloud-builders/javac'
