--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,7 +4,7 @@
     entrypoint: mvn
     args: ['clean','package','-Dmaven.test.skip=true']
   
-  - id: 'build your instance'
+  - id: 'build your instances'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
     args: ['release']  
