--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@
   - id: 'build your instances'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
-    args: ['release']  
+    args: ['deploy']  
   #  dir: "run/helloworld"
   - id: 'Build'
     name: 'gcr.io/cloud-builders/javac'
