--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@
   - id: 'build your instance'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
-    args: ['clean','package','-Dmaven.test.skip=true']
+    args: ['clean','package']
   
   - id: 'build your instances'
     name: 'maven:3.6.0-jdk-11-slim'
