--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@
   - id: 'build your instancce'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
-    args: ['exec:java','-Dexec.mainClass=com.example.Game']
+    args: ['spring-boot:run']
     dir: "src/main/java/com/mcnz/rps"
   
   - id: 'build your instances'
