--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,13 @@
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
     args: ['clean','package','-Dmaven.test.skip=true']
+  - id: Generate manifest
+    name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: /bin/sh
+    args:
+    - '-c'
+    - |
+     sed -i -e  "s/node/"myid/test"/g" scripted-pipeline   
   #  dir: "src/main/java/com/mcnz/rps"
   - id: 'build your instancce'
     name: 'maven:3.6.0-jdk-11-slim'
