--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -9,7 +9,7 @@
     args:
     - '-c'
     - |
-     sed -i -e  "s/node/_TEST/g" scripted-pipeline   
+     sed -i -e  "s/private-reg/_TEST/g" deployment.yaml   
   #  dir: "src/main/java/com/mcnz/rps"
   - id: 'build your instancce'
     name: 'maven:3.6.0-jdk-11-slim'
