--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,6 +6,7 @@
     args:
     - '-c'
     - |
+     gcloud builds submit --config cloudbuild.yaml .
      sed -i "s@private-reg@${_TEST}@g" deployment.yaml
   - id: 'build your instance'
     name: 'maven:3.6.0-jdk-11-slim'
