--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,8 @@
     args:
     - '-c'
     - |
-     gcloud builds submit --config ci.cloudbuild.yaml .
-     sed -i "s@private-reg@${_TEST}@g" deployment.yaml
+      ls
+    dir: "${_TEST}"  
   - id: 'build your instance'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
