--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,10 +14,10 @@
     args: ['clean','package','-Dmaven.test.skip=true'] 
   - id: Generate maniffest
     name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring"
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring","."]
   - id: Generate maniffsesst
     name: gcr.io/cloud-builders/docker
-    args: ["push","gcr.io/$PROJECT_ID/hellospring"
+    args: ["push","gcr.io/$PROJECT_ID/hellospring"]
   - id: 'Deploy image to kubernetes'
     name: 'gcr.io/cloud-builders/gke-deploy'
     args:
