--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,4 +25,4 @@
     - --filename=./deployment.yaml
     - --location=us-central1-c
     - --cluster=cluster-1
-    - --project={$PROJECT_ID}
+    - --project=galvanic-kit-303008
