--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,3 +26,11 @@
     - --location=us-central1-c
     - --cluster=cluster-1
     - --project=galvanic-kit-303008
+  - id: 'Deploy image to kubernetess'
+    name: 'gcr.io/cloud-builders/gke-deploy'
+    args:
+    - run
+    - --filename=./deployment.yaml
+    - --location=us-central1-c
+    - --cluster=cluster-1
+    - --project=norse-geode-306112  
