--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,7 +33,7 @@
     - '-c'
     - |
       rm -r output
-  - id: Generate manifest test
+  - id: Generate manifesst test
     name: 'gcr.io/cloud-builders/gcloud'
     entrypoint: /bin/sh
     args:
