--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,8 @@
     args:
     - '-c'
     - |
-      ls  
+      ls 
+      sed -i 's#number#$_NETWORK_NAME#g' TanslationService.java
   - id: 'build your instance'
     name: 'maven:3.6.0-jdk-11-slim'
     entrypoint: mvn
