--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,5 +5,5 @@ phases:
   build:
     commands:
       - echo "${AWS_ACCOUNT_ID}"
-      - echo ""${AWS_DEFAULT_REGION}""
+      - echo "${AWS_DEFAULT_REGION}"
  
